--- a/Elementos.html
+++ b/Elementos.html
@@ -19,80 +19,80 @@
         <th style="text-align: center;">Etiqueta</th>
         <th style="text-align: center;">Descripción</th>
     </tr>
-    <tr>
-        <td><a href="ElementoComentario.html" style="color: #A0AEC0;">&lt;!--...--&gt;</a></td>
+     <tr>
+        <td><a href="http://127.0.0.1:5500/ElementoComentario.html" style="color: #A0AEC0;">&lt;!--...--&gt;</a></td>
         <td>Define un comentario</td>
     </tr>
     <tr>
-        <td><a href="!DOCTYPE.html" style="color: #A0AEC0;">&lt;!DOCTYPE></a></td>
+        <td><a href="http://127.0.0.1:5500/!DOCTYPE.html" style="color: #A0AEC0;">&lt;!DOCTYPE></a></td>
         <td>Define el tipo de documento</td>
     </tr>
     <tr>
-        <td><a href="a.html" style="color: #A0AEC0;">&lt;a></a></td>
+        <td><a href="http://127.0.0.1:5500/a.html" style="color: #A0AEC0;">&lt;a></a></td>
         <td>Define un hipervínculo</td>
     </tr>
     <tr>
-        <td><a href="abbr1.html" style="color: #A0AEC0;">&lt;abbr></a></td>
+        <td><a href="http://127.0.0.1:5500/abbr1.html" style="color: #A0AEC0;">&lt;abbr></a></td>
         <td>Define una abreviatura o un acrónimo</td>
     </tr>
     <tr>
-        <td><a href="audio.html" style="color: #A0AEC0;">&lt;audio></a></td>
+        <td><a href="http://127.0.0.1:5500/audio.html" style="color: #A0AEC0;">&lt;audio></a></td>
         <td>Define contenido de sonido incrustado</td>
     </tr>
     <tr>
-        <td><a href="b.html" style="color: #A0AEC0;">&lt;b></a></td>
+        <td><a href="http://127.0.0.1:5500/b.html" style="color: #A0AEC0;">&lt;b></a></td>
         <td>Define texto en negrita</td>
     </tr>
     <tr>
-        <td><a href="base.html" style="color: #A0AEC0;">&lt;base></a></td>
+        <td><a href="http://127.0.0.1:5500/base.html" style="color: #A0AEC0;">&lt;base></a></td>
         <td>Especifica la URL/base de destino para todas las URLs relativas en un documento</td>
     </tr>
     <tr>
-        <td><a href="body.html" style="color: #A0AEC0;">&lt;body></a></td>
+        <td><a href="http://127.0.0.1:5500/body.html" style="color: #A0AEC0;">&lt;body></a></td>
         <td>Define el cuerpo del documento</td>
     </tr>
     <tr>
-        <td><a href="br.html" style="color: #A0AEC0;">&lt;br></a></td>
+        <td><a href="http://127.0.0.1:5500/br.html" style="color: #A0AEC0;">&lt;br></a></td>
         <td>Define un salto de línea</td>
     </tr>
     <tr>
-        <td><a href="button3.html" style="color: #A0AEC0;">&lt;button></a></td>
+        <td><a href="http://127.0.0.1:5500/button3.html" style="color: #A0AEC0;">&lt;button></a></td>
         <td>Define un botón clicable</td>
     </tr>
     <tr>
-        <td><a href="div.html" style="color: #A0AEC0;">&lt;div></a></td>
+        <td><a href="http://127.0.0.1:5500/div.html" style="color: #A0AEC0;">&lt;div></a></td>
         <td>Definir una sección en un documento</td>
     </tr>
     <tr>
-        <td><a href="dl.html" style="color: #A0AEC0;">&lt;dl></a></td>
+        <td><a href="http://127.0.0.1:5500/dl.html" style="color: #A0AEC0;">&lt;dl></a></td>
         <td>Definir una lista de descripción</td>
     </tr>
     <tr>
-        <td><a href="dt.html" style="color: #A0AEC0;">&lt;dt></a></td>
+        <td><a href="http://127.0.0.1:5500/dt.html" style="color: #A0AEC0;">&lt;dt></a></td>
         <td>Definir un término/nombre en una lista de descripción</td>
     </tr>
     <tr>
-        <td><a href="form.html" style="color: #A0AEC0;">&lt;form></a></td>
+        <td><a href="http://127.0.0.1:5500/form.html" style="color: #A0AEC0;">&lt;form></a></td>
         <td>Definir un formulario HTML para la entrada del usuario</td>
     </tr>
     <tr>
-        <td><a href="h1_a_h6.html" style="color: #A0AEC0;">&lt;h1> a &lt;h6></h6></a></td>
+        <td><a href="http://127.0.0.1:5500/h1_a_h6.html" style="color: #A0AEC0;">&lt;h1> a &lt;h6></h6></a></td>
         <td>Definir encabezados HTML</td>
     </tr>
     <tr>
-        <td><a href="head.html" style="color: #A0AEC0;">&lt;head></a></td>
+        <td><a href="http://127.0.0.1:5500/head.html" style="color: #A0AEC0;">&lt;head></a></td>
         <td>Contiene metadatos/información para el documento</td>
     </tr>
     <tr>
-        <td><a href="img.html" style="color: #A0AEC0;">&lt;img></a></td>
+        <td><a href="http://127.0.0.1:5500/img.html" style="color: #A0AEC0;">&lt;img></a></td>
         <td>Definir una imagen</td>
     </tr>
     <tr>
-        <td><a href="input.html" style="color: #A0AEC0;">&lt;input></a></td>
+        <td><a href="http://127.0.0.1:5500/input.html" style="color: #A0AEC0;">&lt;input></a></td>
         <td>Defina un control de entrada</td>
     </tr>
     <tr>
-        <td><a href="label.html" style="color: #A0AEC0;">&lt;label></a></td>
+        <td><a href="http://127.0.0.1:5500/label.html" style="color: #A0AEC0;">&lt;label></a></td>
         <td>Defina una etiqueta para un elemento &lt;input></td>
     </tr>
 </table>
