--- a/!DOCTYPE.html
+++ b/!DOCTYPE.html
@@ -209,8 +209,8 @@ ul.navbar {
         <h1>Etiqueta HTML &lt;!DOCTYPE&gt;</h1>
 
         <div class="nav-buttons">
-            <a href="http://127.0.0.1:5500/Elementos.html">Anterior</a>
-            <a href="http://127.0.0.1:5500/a.html">Próximo</a>
+            <a href="Elementos.html">Anterior</a>
+            <a href="a.html">Próximo</a>
         </div>
 
         <div class="example-section">
